# OpenLLMAuth

./: .gitignore  AGENT.md  ANTHROPIC_ADAPTER_CHANGES.md  PKGBUILD  README.md  WORKLOG.md  pyproject.toml
docs/: EXECUTION_LOG.md  FUNCTIONAL_EXPANSION_TASKLIST_2026-03-06.md  HUMAN_LOOP_PROTOCOL.md  README.md  ROUNDTABLE_DISCUSSION_LOG.md  ROUNDTABLE_DISCUSSION_LOG_BAA_GENERATIVE_SPLIT.md  ROUNDTABLE_DISCUSSION_LOG_BAA_PHASE2.md  ROUNDTABLE_DISCUSSION_LOG_BAA_PHASE3.md  ROUNDTABLE_DISCUSSION_LOG_BAA_PHASE4.md  ROUNDTABLE_DISCUSSION_LOG_STEP10.md  ROUNDTABLE_DISCUSSION_LOG_STEP11.md  ROUNDTABLE_DISCUSSION_LOG_STEP12.md  ROUNDTABLE_DISCUSSION_LOG_STEP2.md  ROUNDTABLE_DISCUSSION_LOG_STEP3.md  ROUNDTABLE_DISCUSSION_LOG_STEP4.md  ROUNDTABLE_DISCUSSION_LOG_STEP5.md  ROUNDTABLE_DISCUSSION_LOG_STEP6.md  ROUNDTABLE_DISCUSSION_LOG_STEP7.md  ROUNDTABLE_DISCUSSION_LOG_STEP8.md  ROUNDTABLE_DISCUSSION_LOG_STEP9.md  ROUNDTABLE_DISCUSSION_TEMPLATE.md  agent-bridge.md  api.md  configuration.md  development.md  installation.md  providers.md  security.md
src/: AGENT.md  PKGBUILD  README.md  pyproject.toml
tests/: conftest.py  test_agent_bridge_provider.py  test_anthropic_adapter.py  test_auth_manager_parsing.py  test_bedrock_provider.py  test_claude_code_gateway_compat.py  test_cli_helpers.py  test_codex_cli_provider.py  test_config_routes_dashboard.py  test_embeddings.py  test_gateway_security_hardening.py  test_main_templates.py  test_oauth_refresh.py  test_openai_codex_provider.py  test_openbulma_provider.py  test_provider_catalog.py  test_provider_fallback_routes.py  test_usage_store.py  (+2 more)
(+40 files in other folders)
