[project]
name = "open_llm_auth"
version = "0.1.0"
description = "LLM Router and Authenticator compatible with OpenAI API"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "typer",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "rich",
    "jinja2",
]
requires-python = ">=3.9"

[project.scripts]
open-llm-auth = "open_llm_auth.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_llm_auth"]
include = [
    "src/open_llm_auth/server/static/*",
    "src/open_llm_auth/server/templates/*",
]
